# mdformat-lists

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  publish.yml
mdformat_lists/: __init__.py  _plugin.py
tests/: test_bullets_plugin.py
